# modern_c_on_sea

./: .gitignore  README.md
examples/: godbolt1.c  godbolt2.c  godbolt3.c  godbolt4.c  godbolt5.c
workshop/: CMakeLists.txt  main.c
workshop/include/: kv_pair.h  word_counter.h
workshop/src/: kv_pair.c  word_counter.c
